<resources>
    <string name="app_name">SpaceX</string>
    <string name="spacex_logo_descript">"Logo of SpaceX "</string>
    <string name="companyInfo_string">%1$s \nSpaceX estimate worth: $ %2$d\nSpaceX now employs %3$d people"</string>
    <string name="social_links">SpaceX website: %1$s \nFlickr: %2$s \nTwitter: %3$s \nElon\'s Twitter: %4$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="missions_details">Mission\'s Details:</string>
    <string name="spacex_app_name">SpaceX App</string>
    <string name="missions">Missions</string>
    <string name="mission_details_string">Mission Details</string>
    <string name="mission_details_name">Mission name: %s</string>
    <string name="missions_details_id">Mission\'\s ID: %s</string>
    <string name="mission_details_manufacturers">Manufacturers: %s</string>
    <string name="mission_details_payloadIds">Payload IDs: %s</string>
    <string name="mission_details_wikipedia">Wiki link: %s</string>
    <string name="mission_details_website">Website: %s</string>
    <string name="mission_details_twitter">Twitter: %s</string>
    <string name="mission_details_description">Description: %s</string>
    <string name="cores">Cores</string>
    <string name="core_serial">Core serial: %s</string>
    <string name="core_block">Core block: %s</string>
    <string name="core_status">Core status: %s</string>
    <string name="core_launch_date">Core launch date: %s</string>
    <string name="core_details">Details: %s</string>
    <string name="all_cores">All cores</string>
    <string name="past_cores">Past Cores</string>
    <string name="upcoming_cores">Upcoming Cores</string>
    <string name="active_cores">Active Cores</string>
    <string name="cores_landed_on_water">Landed on water</string>

</resources>