<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="vitaliyr.example.spacex.overview.TitleScreenFragment"
        android:label="@string/spacex_app_name"
        tools:layout="@layout/fragment_title_screen"/>
    <fragment
        android:id="@+id/missionsScreenFragment"
        android:name="vitaliyr.example.spacex.missions.MissionsScreenFragment"
        android:label="@string/missions"
        tools:layout="@layout/missions_lsit">
        <action
            android:id="@+id/action_missionsScreenFragment_to_missions_details"
            app:destination="@id/missions_details"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/missions_details"
        android:name="vitaliyr.example.spacex.missions.MissionDetailsFragment"
        android:label="@string/mission_details_string"
        tools:layout="@layout/fragment_missions_details">
        <argument
            android:name="selectedMission"
            app:argType="vitaliyr.example.spacex.dtos.MissionsDTO" />
    </fragment>
    <fragment
        android:id="@+id/coresFragment"
        android:name="vitaliyr.example.spacex.cores.CoresFragment"
        android:label="@string/cores"
        tools:layout="@layout/cores_list" />

</navigation>